--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,17 @@
-printshellcmds: True
-sample_metadata: "config/sample_metadata.csv"
-
+printshellcmds: yes
+sample_metadata: config/sample_metadata.csv
 generate_data:
-  seed: 1234567
+  seed: 123456.0
+  'n': 10000.0
 wrangle:
   nrow: 4
 plot:
-  color: "red"
+  color: red
+scater_plot:
+  dot_col: blue
+histogram:
+  bar_col: blue
+  bar_fill: green2
+  nbins: 10.0
+vln_plot:
+  param1: orange
